--- a/_site.yml
+++ b/_site.yml
@@ -20,3 +20,4 @@ navbar:
     - icon: fab fa-twitter
       href: https://twitter.com/Ben_R_Goldstein
 output: distill::distill_article
+theme: main.css
