--- a/_site.yml
+++ b/_site.yml
@@ -7,8 +7,8 @@ navbar:
   right:
     - text: "Home"
       href: index.html
-    - text: "Blog"
-      href: blog.html
+    # - text: "Blog"
+    #   href: blog.html
     - text: "Research"
       href: Research.html
     - text: "CV"
@@ -17,7 +17,7 @@ navbar:
       href: contact.html
     - icon: fab fa-github
       href: https://github.com/dochvam
-    - icon: fab fa-twitter
-      href: https://twitter.com/Ben_R_Goldstein
+    # - icon: fab fa-twitter
+    #   href: https://twitter.com/Ben_R_Goldstein
 output: distill::distill_article
 theme: main.css
